# tickscope-mcp

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  TickFeed_MCP_구현명세.md  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: README.md
examples/: RECORDING.md  claude_code_config.json  demo.py  demo.tape  demo_prompts.md
src/tickfeed/: __init__.py  __main__.py  config.py  prompts.py  resources.py  server.py  utils.py
src/tickfeed/core/: analysis.py  cache.py  context.py  exchange_manager.py  indicators_engine.py  ingestion.py  retry.py  service.py  signal_history.py  storage.py  structure.py
src/tickfeed/tools/: __init__.py  market.py  meta.py  screen.py  watch.py
src/tickscope/: __init__.py  __main__.py  config.py  models.py  prompts.py  resources.py  runtime.py  server.py  utils.py
src/tickscope/core/: __init__.py  context.py  exchange_manager.py  ingestion.py  retry.py  service.py  signal_history.py  storage.py
src/tickscope/tools/: __init__.py  _guard.py  analysis.py  deep.py  indicators.py
tests/: conftest.py  test_analysis.py  test_deep.py  test_guard.py  test_indicators.py  test_ingestion.py  test_integration_live.py  test_market.py  test_mcp_integration.py  test_retry.py  test_server.py  test_service.py  test_storage.py  test_structure.py
tests/fixtures/: .gitkeep
